Fix inline box positioning on Safari

--- a/src/scss/common/questions.scss
+++ b/src/scss/common/questions.scss
@@ -384,6 +384,10 @@
   }
 }
 
+input.inline-input {
+  display: inline-flex;
+}
+
 .question-actions {
   align-self: flex-start;
   &.question-actions-leftmost {
